<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent" >


    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="220dp"
        android:id="@+id/listView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Szukaj"
        android:id="@+id/pokazWydatek"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/szukaj"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/pokazWydatek"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:id="@+id/radioCryteria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/szukaj"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <RadioButton

        android:text="@string/nazwa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nazwaRB"
        android:layout_below="@+id/szukaj"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="true" />


        <RadioButton
        android:text="@string/rodzaj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rodzajRB"
        android:layout_alignBaseline="@+id/nazwaRB"
        android:layout_alignBottom="@+id/nazwaRB"
        android:layout_alignLeft="@+id/pokazWydatek"
        android:layout_alignStart="@+id/pokazWydatek" />

        <RadioButton
            android:text="@string/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dataRB"
            android:layout_alignBaseline="@+id/rodzajRB"
            android:layout_alignBottom="@+id/rodzajRB"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            />
    </RadioGroup>

    <Button
        android:text="Szukaj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/szukajBtn"
        android:layout_alignTop="@+id/radioCryteria"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="Suma : "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sumaShow"
        android:textColor="@android:color/holo_red_dark"
        android:layout_alignParentBottom="true"
        android:textSize="24sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_day"
        android:id="@+id/imageButton2"
        android:background="@android:drawable/ic_menu_day"
        android:layout_alignTop="@+id/spinner2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="9dp"
        android:layout_marginEnd="9dp" />

    <RadioGroup
        android:id="@+id/radioSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/szukajBtn"
        android:layout_alignRight="@+id/radioCryteria"
        android:layout_alignEnd="@+id/radioCryteria">

    <RadioButton
        android:text="Malejąco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/szukajBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="true"
        android:id="@+id/rbMalejaco" />

        <RadioButton
            android:text="Rosnąco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/rbMalejaco"
            android:layout_toRightOf="@+id/rbMalejaco"
            android:layout_toEndOf="@+id/rbMalejaco"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:id="@+id/rbRosnaco" />
    </RadioGroup>

    <TextView
        android:text="Sortuj (koszt)  :"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioCryteria"
        android:layout_toLeftOf="@+id/pokazWydatek"
        android:layout_toStartOf="@+id/pokazWydatek"
        android:layout_marginTop="8dp"
        android:id="@+id/tvSortowanie" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_search"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/pokazWydatek"
        android:layout_toStartOf="@+id/pokazWydatek"
        android:layout_marginRight="13dp"
        android:layout_marginEnd="13dp"
        android:id="@+id/imageView6" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioCryteria"
        android:layout_alignLeft="@+id/szukaj"
        android:textAlignment="center"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_alignStart="@+id/szukaj"
        android:id="@+id/spinner2"

        android:layout_alignTop="@+id/szukaj"
        android:popupBackground="#FFABDDA4"
        android:layout_alignRight="@+id/szukaj"
        android:layout_alignEnd="@+id/szukaj" />

</RelativeLayout>